--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "redux": "^5.0.1"
+  }
 }
